<resources>
    <string name="app_name">ITD Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_firstname">First Name</string>
    <string name="hint_lastname">Last Name</string>
    <string name="hint_itd_wallet_address">ITD Wallet Address</string>
    <string name="gender">Gender</string>
    <string name="hint_user_name">Username/Handle</string>
    <string name="hint_UserId">Email</string>
    <string name="hint_user">User Test</string>
    <string name="hint_label_for_address">Label For Address</string>
    <string name="hint_Wallet_Address">Wallet Address</string>
    <string name="generteaddress">  Generate\nAddress  </string>
    <string name="generteaddress2">  Generate Address  </string>
    <string name="editreceiveaddress">Edit Receive Address</string>
    <string name="cancel">Cancel</string>

    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="action_send_request">Send Cryptocurrency</string>
    <string name="action_request">Request</string>

    <string name="hint_name_add">Name</string>
    <string name="hint_email_id">Email id</string>
    <string name="hint_user_name_add">Username</string>
    <string name="hint_wallet_address">ITD Wallet address</string>
    <string name="hint_note">Notes</string>

    <string name="hint_subject">Subject</string>
    <string name="hint_type_your_text">Type your text</string>

    <string name="hint_enter_crypt_amt">Enter Cryptocurrency Ammount</string>
    <string name="hint_select_contact">Select contact to request ITD</string>
    <string name="hint_desti_wallet_address">Destination wallet address</string>

    generteaddress
    <string name="hint_password">Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_cnf_new_password">Confirm New Password</string>
    <string name="hint_cnf_password">Confirm Password</string>
    <string name="hint_referral_code">Referral Code(Optional)</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Submit</string>
    <string name="btn_reset_submit">Submit</string>
    <string name="send_otp">Send Activation Code</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="success_msg_email">Valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_subject">Enter the Subject</string>
    <string name="err_msg_your_text">Please enter your text message.</string>
    <string name="err_msg_valid_pwd">Please enter the valid and correct password</string>


    <string name="err_msg_desired_password">Enter the password</string>

    <string name="Bitcoin">Bitcoin</string>
    <string name="btn_send_req">Send Request</string>
    <string name="btn_send_btc">Send BTC</string>

    <string name="bitcoinwalletBalance">Bitcoin Wallet Balance</string>
    <string name="how_cn_hlp">How can we help today?</string>
    <string name="detail_submission">Please submit your details, share your comments with us and\nwe will get back to you as soon as possible.\nWe would like to hear from you.</string>
    <string name="create_tickect">Create Ticket</string>
    <string name="active_tickect">Active Ticket</string>
    <string name="history_tickect">History Ticket</string>
    <string name="faq_tickect">FAQs</string>

    <string name="create_ticket">Create Ticket</string>

    <string name="transaction">Transaction</string>
    <string name="send">Send</string>
    <string name="receive">My Receive Address</string>
    <string name="contact">Contact</string>
    <string name="alternative_currency">Alternative Currency</string>
    <string name="mpin">mpin</string>
    <string name="changepassword">Change Password</string>
    <string name="support">Support</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Contact</string>
    <string name="send_cryptocurrency">Send Cryptocurrency</string>
    <string name="request_cryptocurrency">Request Cryptocurrency</string>


    <string name="err_msg_first_name">Minimum six characters are required</string>
    <string name="err_msg_last_name">Minimum six characters are required</string>
    <string name="err_msg_user_name">This field is mandatory</string>


    <string name="err_msg_password_is_empty">This field is mandatory.</string>
    <string name="err_msg_password_length">Minimum six characters are required</string>
    <string name="err_msg_password_matching">Password does not match.</string>

    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_header">Forgot Password</string>
    <string name="forgot_pwd_text">Please enter email id you provided during\nthe registration process. In order to receive \nactivation code by email.</string>
    <string name="reset_password_header">Reset Password</string>
    <string name="reset_password_txt">Please enter and confirm your new password.</string>
    <string name="createAccount">No Account Yet? Create New </string>
    <string name="termsandconditions">I agree terms and conditions </string>
    <string name="alreadyaccount">Already an account.Login</string>

    <string name="upgrade_dialog_title">App update is available. Please update\nyour app.</string>

    <string name="to_make_your_walllet_more_secure">To make your wallet more secure, Set Your mpin now.</string>

    <string name="upgrade_dialog_txt">Do you want to upgrade your application ?</string>
    <string name="upgrade_skip">Skip</string>
    <string name="upgrade_upgrade">Upgrade</string>
    <string name="Activity_Exit_Alert">Activity Exit Alert</string>
    <string name="exit_add_contact">Are you sure want to exit?</string>
    <string name="want_to_delete_contact">Do you want to delete this contact?</string>

    <string name="pwd_reset_success">Your Password is successfully set.\nPlease Login Now.</string>


    <string name="pin_content_desc">PIN input field</string>
    <string name="verify_account_txt">Verify Account</string>
    <string name="verify_otp_txt">Verify OTP</string>
    <string name="verify_txt">We have send Activation Code to your email address.</string>
    <string name="resend_otp_txt">Resend OTP</string>
    <string name="btn_verify">Verify</string>
    <string name="sign_up">Sign Up</string>
    <string name="save">Save</string>
    <string name="set_mpin_success">You have successfully set your MPIN.</string>

    <string name="set_your_mpin_header">Set Your new MPIN</string>
    <string name="set_mpin_detail">MPIN adds an extra layer of security to your account.</string>
    <string name="enter_mpin"> Enter 4 digit mpin</string>
    <string name="confirm_mpin">Confirm MPIN</string>






    <string name="pin_label_text">Please enter your activation code.</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <dimen name="count">10dp</dimen>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="countries">
        <item>Ethereum</item>
        <item>Ripple</item>
        <item>Bitcoin Cash</item>
        <item>Nem</item>
        <item>Litecoin</item>
        <item>Monero</item>
        <item>Peercoin</item>

    </string-array>
</resources>