<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundcolor"
    tools:context="in.bitstreet.com.itdwallet.view.ForgotPassword">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:orientation="vertical"
        android:layout_marginTop="30dp">



        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@drawable/logo"
          />

        <TextView
            android:id="@+id/forgot_password_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_password_header"
            android:textColor="@color/white"
            android:textSize="25dp" />


        <TextView
            android:id="@+id/tv_forgot_pwd_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/forgot_pwd_text"
            android:textColor="@color/white"
            android:textSize="14dp" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_forgot_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                app:errorTextAppearance="@style/EmailErrorAppearance">

                <EditText
                    android:id="@+id/et_forgot_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/ic_launcher"
                    android:drawableRight="@drawable/ic_launcher"

                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_veryfyotp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:text="@string/send_otp"
                android:textColor="@android:color/black" />


        </LinearLayout>


    </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
